hphp/hack/test/typecheck/reified_generics/consistent_construct_self.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

<<__ConsistentConstruct>>
class C<reify T> {
  public function f(): void {
    new static();
  }
}
